Removed "overflow-x: hidden" property from body and .fullscreen to fix slide menu background flickering

--- a/public/stylesheets/angular-slide-menu.styl
+++ b/public/stylesheets/angular-slide-menu.styl
@@ -6,9 +6,6 @@ asm-vendor(prop, args)
   -o-{prop} args
   {prop} args
 
-.body, .fullscreen
-  overflow-x hidden
-
 .asm-wrapper
   position relative
   top 0
